--- a/app/src/main/res/layout/row_item.xml
+++ b/app/src/main/res/layout/row_item.xml
@@ -11,7 +11,8 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="20dp"
+        android:padding="3dp"
         tools:srcCompat="@tools:sample/avatars"
-        android:contentDescription="" />
+        android:contentDescription="@string/recyclerImageView" />
 
 </LinearLayout>
