--- a/app/src/main/res/layout/game_row_item.xml
+++ b/app/src/main/res/layout/game_row_item.xml
@@ -1,23 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        card_view:cardBackgroundColor="@color/black"
-        card_view:contentPadding="1dp">
+        android:layout_gravity="center"
+        card_view:cardBackgroundColor="@color/white"
+        card_view:contentPadding="4dp">
 
         <ImageView
             android:id="@+id/gameImageView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="centerCrop"
             android:contentDescription="Game Image"
+            android:scaleType="centerCrop"
+            android:foreground="@color/teal_200"
             tools:srcCompat="@tools:sample/avatars" />
 
     </androidx.cardview.widget.CardView>
