--- a/app/src/main/res/layout/game_row_item.xml
+++ b/app/src/main/res/layout/game_row_item.xml
@@ -14,8 +14,10 @@
 
         <ImageView
             android:id="@+id/gameImageView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="120dp"
+            android:layout_height="100dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
             android:contentDescription="Game Image"
             android:scaleType="centerCrop"
             android:foreground="@color/teal_200"
