--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -3,19 +3,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".GameActivity">
 
     <RelativeLayout
         android:id="@+id/information"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingTop="30dp"
+        android:paddingBottom="50dp"
         app:layout_constraintBottom_toTopOf="@id/gridView"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.41">
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/score"
@@ -30,20 +31,21 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:textSize="18sp"></Chronometer>
+
+
     </RelativeLayout>
 
     <GridView
         android:id="@+id/gridView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="668dp"
+        android:horizontalSpacing="5dp"
         android:numColumns="3"
         android:verticalSpacing="5dp"
-        android:horizontalSpacing="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/information">
 
     </GridView>
 
