--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,15 +2,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.tempworkshop.MainActivity">
+
+    <item
+        android:id="@+id/best_records"
+        android:orderInCategory="100"
+        android:title="@string/best_record"
+        app:showAsAction="never" />
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
 
-    <item
-        android:id="@+id/highscore"
-        android:orderInCategory="100"
-        android:title="Highscores"
-        app:showAsAction="never" />
 </menu>
