Updated format constraints

--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -79,12 +79,14 @@
         android:id="@+id/pauseForeground"
         android:layout_width="410dp"
         android:layout_height="609dp"
+        android:layout_marginBottom="24dp"
         android:background="#BE000000"
         android:gravity="center"
         android:text="@string/paused_text"
         android:textColor="#FFFFFF"
         android:textSize="50sp"
         android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/backButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
